# duplink

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
files/depth-duplicates/level1/: small-duplicate1
files/depth-uniques/level1/level2/level3/: unique3
files/softlink-dir/: external-link
src/: api.rs  find.rs  lib.rs  main.rs  util.rs  walk.rs
src/entry/: generic.rs  mod.rs  traits.rs  unix.rs  unixentry.rs  win.rs
src/util/: mod.rs  progress.rs  semaphore.rs
