[package]
name = "duplink"
version = "0.3.3"
authors = ["Akira Mizuno <akmizno@gmail.com>"]
edition = "2018"
description = "A CLI tool for finding duplicate files from directory tree and de-duplicating them."
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/akmizno/duplink"
license = "MIT/Apache-2.0"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
clap = "2"
log = "0.4"
env_logger = "0.8"
walkdir = "2"
itertools = "0.10"
twox-hash = "1"
num_cpus = "1"
fdlimit = "0.2"
tempfile = "3"
memmap = "0.7"
indicatif = "0.16"
atty = "0.2"
compact-rc = "0.4"

[dev-dependencies]
test-log = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"
